Fixed issue with wrapping bullet points by replacing ::after class with row-reverse flex

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,9 +99,9 @@ header img {
 }
 
 #thesigns, #whattodo {
+    box-shadow: 0px 0px 8px #3b3b3b;
     display: flex;
     flex-direction: column;
-    box-shadow: 0px 0px 8px #3b3b3b;
 }
 
 #thesigns li, #whattodo li {
@@ -109,7 +109,7 @@ header img {
     margin-top: .5rem;
 }
 
-#thesigns li::after {
+/* #thesigns li::after {
         content: '';
         display: inline-block;
         height: 3rem;
@@ -118,10 +118,21 @@ header img {
         background-image: url(../images/favicons/favicon-96x96.png);
         background-size: contain;
         background-repeat: no-repeat;
-        margin-right: 0.5rem;
+} */
+
+#thesigns {
+    background-color: var(--red);
+    border-radius: 30px 0 0 30px;
+    text-align: right;
+    list-style-position: inside;
 }
 
-#whattodo li::before {
+#thesigns li {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+#thesigns li::before, #whattodo li::before {
     content: '';
     display: inline-block;
     height: 3rem;
@@ -130,27 +141,6 @@ header img {
     background-image: url(../images/favicons/favicon-96x96.png);
     background-size: contain;
     background-repeat: no-repeat;
-    margin-right: 0.5rem;
-}
-
-#thesigns li::before {
-    content: '';
-    display: none;
-    height: 3rem;
-    width: 3rem;
-    vertical-align: middle;
-    background-image: url(../images/favicons/favicon-96x96.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin-right: 0.5rem;
-}
-
-#thesigns {
-    background-color: var(--red);
-    border-radius: 30px 0 0 30px;
-    
-    text-align: right;
-    list-style-position: inside;
 }
 
 #whattodo {
@@ -244,6 +234,11 @@ footer {
     #thesigns {
         text-align: left;
         list-style-position: outside;
+    }
+
+    #thesigns li {
+        display: block;
+    
     }
 
     #thesigns li::after {
